# rbpf

./: Cargo.toml  Makefile
examples/: disassemble.rs
src/: aligned_memory.rs  asm_parser.rs  assembler.rs  disassembler.rs  ebpf.rs  elf.rs  elf_parser_glue.rs  error.rs  fuzz.rs  interpreter.rs  jit.rs  lib.rs  memory_management.rs  memory_region.rs  program.rs  static_analysis.rs  syscalls.rs  verifier.rs  vm.rs  wrappers.rs
src/elf_parser/: mod.rs
tests/: disassembler.rs  execution.rs  verifier.rs
tests/elfs/: elfs.sh
