[package]
name = "solana_rbpf"
version = "0.8.3"
description = "Virtual machine and JIT compiler for eBPF programs"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/rbpf"
homepage = "https://solana.com/"
keywords = ["BPF", "eBPF", "interpreter", "JIT", "filtering"]
license = "Apache-2.0"
edition = "2018"

include = [
    "src/**",
    "examples/**",
    "tests/**",
    "benches/**",
    "LICENSE*",
    "Cargo.toml",
]

[dependencies]
arbitrary = { version = "1.0", optional = true, features = ["derive"] }
byteorder = { version = "1.2", default-features = false }
#combine = { git = "https://github.com/fluentlabs-xyz/combine", tag = "3.8.1" }
combine = { path = "../combine", default-features = false, features = ["no-std"] }
gdbstub = { version = "0.6.2", optional = true }
goblin = { version = "0.5.1", default-features = false, features = ["alloc", "elf32", "elf64", "mach32", "mach64", "pe32", "pe64", "archive", "endian_fd"] }
hash32 = "0.2.0"
log = "0.4.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "alloc"] }
rustc-demangle = "0.1"
scroll = { version = "0.11", default-features = false }
#thiserror = "1.0.26"
spin = "0.9.8"
hashbrown = "0.15.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "sysinfoapi", "winnt", "errhandlingapi"], optional = true }

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2", optional = true }

[features]
default = ["jit"]
jit = ["libc", "winapi"]
fuzzer-not-safe-for-production = ["arbitrary"]
debugger = ["gdbstub"]

[dev-dependencies]
elf = "0.0.10"
json = "0.12"
test_utils = { path = "test_utils/" }
